// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBody Render <AppBody> with data 1`] = `
<DocumentFragment>
  <div
    class="css-xt4orx"
    role="gamePanel"
  >
    <section
      class="css-hsjawn"
      role="cellsGrid"
    >
      <div
        class="css-es8rv7"
        role="cellContainer-0"
      >
        <div
          class="css-w6oewy"
          role="cellContent-0"
        />
      </div>
      <div
        class="css-2r18jt"
        role="cellContainer-1"
      >
        <div
          class="css-w6oewy"
          role="cellContent-1"
        />
      </div>
      <div
        class="css-2r18jt"
        role="cellContainer-2"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-3"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-4"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-5"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-6"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-7"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-8"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-9"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-10"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-11"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-12"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-13"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-14"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-15"
      />
      <div
        style="clear: both;"
      />
    </section>
  </div>
</DocumentFragment>
`;

exports[`AppBody Render <AppBody> without data 1`] = `
<DocumentFragment>
  <div
    class="css-xt4orx"
    role="gamePanel"
  >
    <section
      class="css-hsjawn"
      role="cellsGrid"
    >
      <div
        class="css-es8rv7"
        role="cellContainer-0"
      >
        <div
          class="css-w6oewy"
          role="cellContent-0"
        />
      </div>
      <div
        class="css-2r18jt"
        role="cellContainer-1"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-2"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-3"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-4"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-5"
      />
      <div
        class="css-es8rv7"
        role="cellContainer-6"
      />
      <div
        class="css-2r18jt"
        role="cellContainer-7"
      />
      <div
        class="css-1jbr29x"
        role="cellContainer-8"
      />
      <div
        style="clear: both;"
      />
    </section>
  </div>
</DocumentFragment>
`;
